k8s/kcm.obmondo.com/opendesk/openproject/openproject.yaml
---
# Source: openproject/templates/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: openproject
  labels:
    app.kubernetes.io/name: openproject
    helm.sh/chart: openproject-10.1.0
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "16.1.0"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: openproject
    app.kubernetes.io/instance: openproject
    openproject/process: web
...
---
# Source: openproject/templates/cron-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openproject-cron
  labels:
    app.kubernetes.io/name: openproject
    helm.sh/chart: openproject-10.1.0
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "16.1.0"
    openproject/process: cron
spec:
  replicas: 0
  strategy:
    type: "Recreate"
  selector:
    matchLabels:
      app.kubernetes.io/name: openproject
      app.kubernetes.io/instance: openproject
      openproject/process: cron
  template:
    metadata:
      annotations:
        
        # annotate pods with env value checksums so changes trigger re-deployments
        
        checksum/env-core: 1a3a33da0a65ed26add9dca16486f25f258cbe0bbad00f4618a30b628c4a2efa
        checksum/env-memcached: 667608227d2126f9c23fc53e77aba999044a535153438b71cdf0325e4faae81d
        checksum/env-oidc: f27c12165f3da0fd0f37af1085bb2e6c85273192ea8ba986982ee25e71910d33
        checksum/env-s3: 9047a67207a617043f892247115c09cf5871da6dc7245d35c3453ff613bbf996
        checksum/env-environment: 125c3e3cbb36b7e675d14b17811372c04f703b310bdd7c89ee5d4afbeb52343c
        checksum/env-cron-environment: 88334edd526f4b3bb70b92978a6842287c9d254785da9b7886e08eaff4ee419a
      labels:
        app.kubernetes.io/name: openproject
        helm.sh/chart: openproject-10.1.0
        app.kubernetes.io/instance: openproject
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: "16.1.0"
        openproject/process: cron
    spec:            
      securityContext:
        fsGroup: 1000
      serviceAccountName: openproject
      volumes:        
        - name: tmp
          # we can't use emptyDir due to the sticky bit issue
          # see: https://github.com/kubernetes/kubernetes/issues/110835
          ephemeral:
            volumeClaimTemplate:
              metadata:
                creationTimestamp: null
              spec:
                accessModes: ["ReadWriteOnce"]
                storageClassName: openebs-tmp-hostpath
                resources:
                  requests:
                    storage: 5Gi
        - name: app-tmp
          # we can't use emptyDir due to the sticky bit / world writable issue
          # see: https://github.com/kubernetes/kubernetes/issues/110835
          ephemeral:
            volumeClaimTemplate:
              metadata:
                creationTimestamp: null
              spec:
                accessModes: ["ReadWriteOnce"]
                storageClassName: openebs-tmp-hostpath
                resources:
                  requests:
                    storage: 5Gi        
      containers:
        - name: "cron"          
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seLinuxOptions: null
            seccompProfile:
              type: RuntimeDefault
          image: registry.opencode.de/bmi/opendesk/components/supplier/openproject/images-mirror/open_desk:16.1.1@sha256:2fe8a7d1cab42611b01f4ca20ce7179a0637477f2882364b4a1cfdebde9ecd6f
          imagePullPolicy: IfNotPresent
          args:
            - bash
            - /app/docker/prod/cron
          volumeMounts:            
            - mountPath: /tmp
              name: tmp
            - mountPath: /app/tmp
              name: app-tmp            
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1"
---
# Source: openproject/templates/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openproject-web
  labels:
    app.kubernetes.io/name: openproject
    helm.sh/chart: openproject-10.1.0
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "16.1.0"
    openproject/process: web
spec:
  replicas: 1
  strategy:
    
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: openproject
      app.kubernetes.io/instance: openproject
      openproject/process: web
  template:
    metadata:
      annotations:
        
        # annotate pods with env value checksums so changes trigger re-deployments
        
        checksum/env-core: 1a3a33da0a65ed26add9dca16486f25f258cbe0bbad00f4618a30b628c4a2efa
        checksum/env-memcached: 667608227d2126f9c23fc53e77aba999044a535153438b71cdf0325e4faae81d
        checksum/env-oidc: f27c12165f3da0fd0f37af1085bb2e6c85273192ea8ba986982ee25e71910d33
        checksum/env-s3: 9047a67207a617043f892247115c09cf5871da6dc7245d35c3453ff613bbf996
        checksum/env-environment: 125c3e3cbb36b7e675d14b17811372c04f703b310bdd7c89ee5d4afbeb52343c
      labels:
        app.kubernetes.io/name: openproject
        helm.sh/chart: openproject-10.1.0
        app.kubernetes.io/instance: openproject
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: "16.1.0"
        openproject/process: web
    spec:            
      securityContext:
        fsGroup: 1000
      serviceAccountName: openproject
      volumes:        
        - name: tmp
          # we can't use emptyDir due to the sticky bit issue
          # see: https://github.com/kubernetes/kubernetes/issues/110835
          ephemeral:
            volumeClaimTemplate:
              metadata:
                creationTimestamp: null
              spec:
                accessModes: ["ReadWriteOnce"]
                storageClassName: openebs-tmp-hostpath
                resources:
                  requests:
                    storage: 5Gi
        - name: app-tmp
          # we can't use emptyDir due to the sticky bit / world writable issue
          # see: https://github.com/kubernetes/kubernetes/issues/110835
          ephemeral:
            volumeClaimTemplate:
              metadata:
                creationTimestamp: null
              spec:
                accessModes: ["ReadWriteOnce"]
                storageClassName: openebs-tmp-hostpath
                resources:
                  requests:
                    storage: 5Gi        
      containers:
        - name: "openproject"          
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seLinuxOptions: null
            seccompProfile:
              type: RuntimeDefault
          image: registry.opencode.de/bmi/opendesk/components/supplier/openproject/images-mirror/open_desk:16.1.1@sha256:2fe8a7d1cab42611b01f4ca20ce7179a0637477f2882364b4a1cfdebde9ecd6f
          imagePullPolicy: IfNotPresent
          args:
            - /app/docker/prod/web
          volumeMounts:            
            - mountPath: /tmp
              name: tmp
            - mountPath: /app/tmp
              name: app-tmp            
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: "/health_checks/default"
              port: 8080
              httpHeaders:
                # required otherwise health check will return 404 because health check is done using the Pod IP, which may cause issues with downstream variants
                - name: Host
                  value: localhost
            initialDelaySeconds: 300
            timeoutSeconds: 3
            periodSeconds: 30
            failureThreshold: 30
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: "/health_checks/default"
              port: 8080
              httpHeaders:
                # required otherwise health check will return 404 because health check is done using the Pod IP, which may cause issues with downstream variants
                - name: Host
                  value: localhost
            initialDelaySeconds: 150
            timeoutSeconds: 3
            periodSeconds: 15
            failureThreshold: 30
            successThreshold: 1
          resources:
            limits:
              cpu: 99
              memory: 2Gi
            requests:
              cpu: 0.1
              memory: 768Mi
---
# Source: openproject/templates/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openproject-worker-default
  labels:
    app.kubernetes.io/name: openproject
    helm.sh/chart: openproject-10.1.0
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "16.1.0"
    openproject/process: worker-default
spec:
  replicas: 1
  strategy:
    
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: openproject
      app.kubernetes.io/instance: openproject
      openproject/process: worker-default
  template:
    metadata:
      annotations:
        
        # annotate pods with env value checksums so changes trigger re-deployments
        
        checksum/env-core: 1a3a33da0a65ed26add9dca16486f25f258cbe0bbad00f4618a30b628c4a2efa
        checksum/env-memcached: 667608227d2126f9c23fc53e77aba999044a535153438b71cdf0325e4faae81d
        checksum/env-oidc: f27c12165f3da0fd0f37af1085bb2e6c85273192ea8ba986982ee25e71910d33
        checksum/env-s3: 9047a67207a617043f892247115c09cf5871da6dc7245d35c3453ff613bbf996
        checksum/env-environment: 125c3e3cbb36b7e675d14b17811372c04f703b310bdd7c89ee5d4afbeb52343c
      labels:
        app.kubernetes.io/name: openproject
        helm.sh/chart: openproject-10.1.0
        app.kubernetes.io/instance: openproject
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: "16.1.0"
        openproject/process: worker-default
    spec:            
      securityContext:
        fsGroup: 1000
      serviceAccountName: openproject
      volumes:        
        - name: tmp
          # we can't use emptyDir due to the sticky bit issue
          # see: https://github.com/kubernetes/kubernetes/issues/110835
          ephemeral:
            volumeClaimTemplate:
              metadata:
                creationTimestamp: null
              spec:
                accessModes: ["ReadWriteOnce"]
                storageClassName: openebs-tmp-hostpath
                resources:
                  requests:
                    storage: 5Gi
        - name: app-tmp
          # we can't use emptyDir due to the sticky bit / world writable issue
          # see: https://github.com/kubernetes/kubernetes/issues/110835
          ephemeral:
            volumeClaimTemplate:
              metadata:
                creationTimestamp: null
              spec:
                accessModes: ["ReadWriteOnce"]
                storageClassName: openebs-tmp-hostpath
                resources:
                  requests:
                    storage: 5Gi        
      containers:
        - name: "openproject"          
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seLinuxOptions: null
            seccompProfile:
              type: RuntimeDefault
          image: registry.opencode.de/bmi/opendesk/components/supplier/openproject/images-mirror/open_desk:16.1.1@sha256:2fe8a7d1cab42611b01f4ca20ce7179a0637477f2882364b4a1cfdebde9ecd6f
          imagePullPolicy: IfNotPresent
          args:
            - bash
            - /app/docker/prod/worker
          volumeMounts:            
            - mountPath: /tmp
              name: tmp
            - mountPath: /app/tmp
              name: app-tmp            
          resources:
            limits:
              cpu: 99
              memory: 4Gi
            requests:
              cpu: 0.25
              memory: 512Mi
---
# Source: openproject/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openproject
  labels:
    app.kubernetes.io/name: openproject
    helm.sh/chart: openproject-10.1.0
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "16.1.0"
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100M
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.org/client-max-body-size: 100M
    nginx.org/proxy-read-timeout: 60s
    nginx.org/proxy-send-timeout: 60s
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "projects.opendesk.kcm.obmondo.com"
      secretName: "opendesk-certificates-tls"
  rules:
    - host: "projects.opendesk.kcm.obmondo.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openproject
                port:
                  name: http
...
---
# Source: openproject/templates/tests/test-connection.yaml
apiVersion: "v1"
kind: "Pod"
metadata:
  name: "openproject-test-connection"
  labels:
    app.kubernetes.io/name: openproject
    helm.sh/chart: openproject-10.1.0
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "16.1.0"
  annotations:
    "managed-by": "helmfile"
spec:
  containers:
    - name: "wget"
      image: "busybox"
      command: ['wget']
      args:
        - '--no-verbose'
        - '--tries=1'
        - '--spider'
        - 'openproject:8080/health_check'
  restartPolicy: "Never"
...
